# papercast-audiobookshelf

./: Makefile  README.md  setup.cfg
.github/workflows/: actions.yml
papercast_audiobookshelf/: __init__.py  audiobookshelf.py
tests/: unit_tests.py
