[metadata]
name = papercast_audiobookshelf
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Audiobookshelf Publisher for Papercast
url = https://github.com/papercast-dev/papercast-audiobookshelf

[options]
packages = find:
# install_requires =

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    isort
    flake8

[options.entry_points]
papercast.publishers =
    AudioBookShelfPublisher = papercast_audiobookshelf:AudioBookShelfPublisher
papercast.types =
    AudioBookShelfFile = papercast_audiobookshelf:AudioBookShelfFile
